[project]
name = "twitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
]

[tool.ruff]

[tool.ruff.lint]
extend-select = ["ANN", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[format]
docstring-code-format = true
